Integration SDL_ttf et SDL_mixer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,11 @@ project(HeroKart)
 
 find_package(OpenGL REQUIRED)
 find_package(SDL REQUIRED)
-# find_package(SDL_TTF REQUIRED)
+find_package(Freetype REQUIRED)
+find_package(SDL_mixer REQUIRED)
+find_package(SDL_ttf REQUIRED)
 
-include_directories(${OPENGL_INCLUDE_DIR} ${SDL_INCLUDE_DIR} third-party/glm)
+include_directories(${OPENGL_INCLUDE_DIR} ${SDL_INCLUDE_DIR} ${SDLTTF_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} third-party/glm)
 
 set(ENABLE_BOOST_WORKAROUND ON)
 set(BUILD_ASSIMP_TOOLS OFF)
@@ -29,9 +31,13 @@ add_subdirectory(third-party/assimp)
 
 #SOIL
 include_directories(third-party/soil)
- 
-set(ALL_LIBRARIES glew ${OPENGL_LIBRARIES} ${SDL_LIBRARY} glimac)
+
+#Freetype
+include_directories(third-party/freetype/include)
+include_directories(third-party/freetype/include/freetype2)
+
+set(ALL_LIBRARIES glew ${OPENGL_LIBRARIES} ${SDLTTF_LIBRARY} ${SDLMIXER_LIBRARY} ${SDL_LIBRARY} glimac)
 
 file(GLOB_RECURSE source_files src/*)
 add_executable(HeroKart ${source_files})
-target_link_libraries(HeroKart assimp SOIL ${ALL_LIBRARIES})
+target_link_libraries(HeroKart assimp SOIL ${SDLTTF_LIBRARY} ${ALL_LIBRARIES} freetype)
